--- a/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.html
+++ b/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.html
@@ -1,6 +1,9 @@
+<body>
+  
+
 <h1>Clientes</h1>
 
-  <table class="customers" *ngIf='clientes && clientes.length'>
+ <!-- <table class="customers" *ngIf='clientes && clientes.length'>
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -13,12 +16,45 @@
         
           <tr *ngFor="let cliente of clientes; index as i ">
             <th scope="row">{{ i + 1 }}</th>
-            <td>{{ cliente.cedula }} </td>
+            <td class="text-center">{{ cliente.cedula }} </td>
             <td>{{ cliente.nombre }}</td>
-            <td>{{ cliente.telefono  }}</td>
+            <td class="text-right">{{ cliente.telefono  }}</td>
           </tr>
         </tbody>
-      </table>
+      </table>-->
     
-    
-  
+
+    <table class="table table-hover">
+        <thead >
+          <tr>
+            <th scope="col">Nº</th>
+            <th scope="col">Identificacion</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Telefono</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Nº">1</td>
+            <td data-label="Identificacion">11</td>
+            <td data-label="Nombre">Otto</td>
+            <td data-label="Telefono">11111111</td>
+          </tr>
+          <tr>
+            <td data-label="Nº">2</td>
+            <td data-label="Identificacion">22</td>
+            <td data-label="Nombre">Thornton</td>
+            <td data-label="Telefono">22222222</td>
+          </tr>
+          <tr>
+            <td data-label="Nº">3</td>
+            <td data-label="Identificacion">33</td>
+            <td data-label="Nombre">the Bird</td>
+            <td data-label="Telefono">33333333</td>
+          </tr>
+        </tbody>
+      </table>
+      
+     <!-- <div class="table table-bordered">-->
+       
+     </body>
