--- a/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,60 @@
-<header>
+<nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
+  <a class="navbar-brand" [routerLink]="['/login']">Paletas la Bendicion</a>
+
+<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <li
+        class="nav-item"
+        [routerLinkActive]="['link-active']"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >
+     <a class="nav-link text-dark" [routerLink]="['/']">Iniciar Session</a>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Usuarios
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <a routerLink="/usuarioRegistro-component" routerLinkActive="active">First Component</a>
+      
+      
+    </div>
+  </li>
+    <!-- <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Clientes
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="/clienteRegistro">Registro</a>
+        <a class="dropdown-item" href="/clienteRegistro">Consulta</a>
+        
+      </div>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Ventas
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/ventaRegistro">Registro</a>
+          <a class="dropdown-item" href="/ventaRegistro">Consulta</a>
+          
+        </div>
+     </li> -->
+  </ul>
+</div>
+</nav>
+
+
+
+
+
+
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+  
+  class="navbar  navbar-light bg-light navbar-expand-sm  navbar-toggleable-sm  border-bottom box-shadow mb-3" 
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">Web</a>
@@ -20,12 +74,12 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-         <!-- <li
+           <li
             class="nav-item"
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+           <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/counter']"
@@ -41,7 +95,7 @@
             <a class="nav-link text-dark" [routerLink]="['/personaConsulta']"
               >consulta persona</a
             >
-          </li>-->
+          </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
               <a class="nav-link text-dark" [routerLink]="['/clienteConsulta']"
                   >Consulta</a
@@ -51,11 +105,69 @@
               <a class="nav-link text-dark" [routerLink]="['/clienteRegistro']"
                   >Registro</a
                >
-          </li>
-              
-          
+         </li> 
+         <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-dark" [routerLink]="['/ventaConsulta']"
+              >Consulta de venta</a
+           >
+      </li>
+      <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-dark" [routerLink]="['/ventaRegistro']"
+              >Registro de venta</a
+           >
+     </li> 
+     <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/usuarioRegistro']"
+        >Registro Usuario</a
+      >
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/usuarioConsulta']"
+        >Consulta Usuario</a
+      >
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/login']"
+        >Login</a
+      >
+    </li>
         </ul>
       </div>
     </div>
   </nav>
-</header>
+
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>-->
