--- a/Web/ClientApp/src/app/venta/venta-consulta/venta-consulta.component.css
+++ b/Web/ClientApp/src/app/venta/venta-consulta/venta-consulta.component.css
@@ -1,13 +1,4 @@
-/* .table-hover.thead {
-    background-color: blue;
-    color: cornsilk;
-}
-th {
-    /* background-color: rgb(14, 10, 241); */
- /*   background-color: rgba(3, 130, 248, 0.808);
-    color: white;
-  } */
-  body{
+body{
     
     margin: 0;
     padding: 20px;
@@ -28,9 +19,10 @@ th {
       padding: 7px 15px;
       border: 1px solid #ddd;
       text-align: center;
-      font-size: 16px;
+      font-size: 13px;
   }
   .table th{
+      font-weight: lighter;
       background-color: #1b6ec2;
       color: #ffffff;
   }
@@ -39,7 +31,7 @@ th {
   }
 
   /*responsive*/
-  @media(max-width: 400px){
+  @media(max-width: 800px){
       .table thead{
           display: none;
       }
