--- a/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.css
+++ b/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.css
@@ -1,11 +1,11 @@
 /* .table-hover.thead {
     background-color: blue;
     color: cornsilk;
-}
-th {
-    /* background-color: rgb(14, 10, 241); */
- /*   background-color: rgba(3, 130, 248, 0.808);
-    color: white;
+} */
+/* th {
+    background-color: rgb(14, 10, 241); 
+   background-color: rgba(3, 130, 248, 0.808);
+   color: white;
   } */
   body{
     
@@ -34,9 +34,21 @@ th {
       background-color: #1b6ec2;
       color: #ffffff;
   }
-  .table tbody tr:nth-child(even){
+  /* .table td{
+    margin-bottom:15px;
+    border: 0.1px solid rgb(69, 146, 209);
+  } */
+  /* .table tbody tr:nth-child(even){
       background-color: rgb(219, 235, 241);
+  } */
+  input{
+    border: 1px solid rgb(69, 146, 209);
+    align-self: auto;
   }
+ /* .table tbody{
+     background-color: white;
+ } */
+ 
 
   /*responsive*/
   @media(max-width: 400px){
@@ -47,16 +59,23 @@ th {
           display: block;
           width: 100%;
       }
-      .table tr{
-          margin-bottom:15px;
-      }
+      
       .table td{
           text-align: right;
           padding-left: 50px;
           text-align: right;
           position: relative;
           font-size: 15px;
+          border: 1px solid white;
+          font-weight: bold;
       }
+      .table tr{
+        margin-bottom:15px;
+       /* border: 1px solid rgb(69, 146, 209);
+        background-color:rgb(235, 245, 251 ); */
+         background-color:  rgb(69, 146, 209);
+        /* color: #ffffff; */
+    }
       .table td::before{
           content: attr(data-label);
           position: absolute;
@@ -65,5 +84,8 @@ th {
           padding-left: 15px;
           font-weight: bold;
           text-align: left;
+          color: white;
+          
       }
+      
   }
