--- a/Web/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Web/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,6 +2,7 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  
 }
  
 html {
@@ -11,9 +12,30 @@ html {
   html {
     font-size: 16px;
   }
+  
 } 
+ul{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
- 
+@media (max-width: 991px) { 
+  .navbar{
+          text-align: center;
+         }
+         a{
+          text-align: center;
+        }
+        div{
+          text-align: center;
+          width: 200px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+}
