--- a/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,173 @@
-<nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
+<!-- <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <span class="navbar-brand">Dropdowns in navbar</span>
+  <button class="navbar-toggler" type="button" aria-controls="navbarContent" [attr.aria-expanded]="!collapsed" aria-label="Toggle navigation" (click)="collapsed = !collapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" ngbDropdown>
+        <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown1" role="button">
+          Static
+        </a>
+        <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+          <!-- <a class="nav-link" ngbDropdownItem [routerLink]="'login'"   (click)="$event.preventDefault()">Action</a> -->
+          <!-- <a ngbDropdownItem href="/Web/ClientApp/src/app/usuario/usuario-consulta/usuario-consulta.component.html" (click)="$event.preventDefault()">Another action</a>
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Something else here</a>
+        </div>
+      </li>
+
+      <li class="nav-item" ngbDropdown>
+        <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown2" role="button">
+          Static right
+        </a>
+        <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Action</a>
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Another action</a>
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Something else here</a>
+        </div>
+      </li>
+
+      <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
+        <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown3" role="button">
+          Dynamic
+        </a>
+        <div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Action</a>
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Another action</a>
+          <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav> --> 
+
+
+
+
+
+
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark  mb-3 ">
+  <a class="navbar-brand" [routerLink]="'login'">Paletas La Bendición</a>
+
+  <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    &#9776;
+  </button>
+
+  <!-- Step 2: Add the ngbCollapse directive to the element below. -->
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse  ">
+    <ul class="navbar-nav">
+      
+      <!-- <li class="nav-item">
+        <a class="nav-link" [routerLink]="'ventaConsulta'" (click)="isMenuCollapsed = true">Ventas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'clienteRegistro'" (click)="isMenuCollapsed = true">Registro Venta</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'clienteConsulta'" (click)="isMenuCollapsed = true"> Cliente</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'clienteRegistro'" (click)="isMenuCollapsed = true">Registro Cliente</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'usuarioConsulta'" (click)="isMenuCollapsed = true"> Usuarios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'usuarioRegistro'" (click)="isMenuCollapsed = true">Registro Usuario</a>
+      </li> -->
+      <li ngbDropdown class="nav-item">
+        <a href (click)="false" class="nav-link" ngbDropdownToggle>Usuarios</a>
+        <div ngbDropdownMenu>
+          <a ngbDropdownItem [routerLink]="'usuarioConsulta'" (click)="isMenuCollapsed = true"> Consulta de Usuarios</a>
+          <!-- <a ngbDropdownItem [routerLink]="'usuarioRegistro'" (click)="isMenuCollapsed = true"> Consulta de Usuarios</a> -->
+          <button ngbDropdownItem [routerLink]="'usuarioRegistro'" (click)="isMenuCollapsed = true">Registro de Usuarios</button>
+          <!-- <div class="dropdown-divider"></div>
+          <button ngbDropdownItem>Separated link</button> -->
+        </div>
+      </li>
+      <li ngbDropdown class="nav-item">
+        <a href (click)="false" class="nav-link" ngbDropdownToggle>Clientes</a>
+        <div ngbDropdownMenu>
+          <a ngbDropdownItem [routerLink]="'clienteConsulta'" (click)="isMenuCollapsed = true"> Consulta de Clientes</a>
+          <a ngbDropdownItem [routerLink]="'clienteRegistro'" (click)="isMenuCollapsed = true"> Registro de Clientes</a> 
+        </div>
+      </li>
+      <li ngbDropdown class="nav-item">
+        <a href (click)="false" class="nav-link" ngbDropdownToggle>Ventas</a>
+        <div ngbDropdownMenu>
+          <a ngbDropdownItem [routerLink]="'ventaConsulta'" (click)="isMenuCollapsed = true"> Consulta de Ventas</a>
+          <a ngbDropdownItem [routerLink]="'ventaRegistro'" (click)="isMenuCollapsed = true"> Registro de Ventas</a> 
+        </div>
+      </li>
+      <li class="nav-item active  "id="login">
+        <a class="nav-link " [routerLink]="'login'" (click)="isMenuCollapsed = true">Iniciar Sesion</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+<!-- <ul ngbNav #nav="ngbNav" [activeId]="2" class="nav-tabs justify-content-center">
+  <li [ngbNavItem]="1">
+    <a ngbNavLink>Simple</a>
+    <ng-template ngbNavContent>
+      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
+        master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
+        keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
+        salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+    </ng-template>
+  </li>
+  <li [ngbNavItem]="2">
+    <a ngbNavLink><b>Fancy</b> title</a>
+    <ng-template ngbNavContent>
+      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko
+        farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts
+        ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar
+        helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson
+        8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester
+        stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
+    </ng-template>
+  </li>
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>Dropdown</a>
+    <div ngbDropdownMenu>
+      <a ngbDropdownItem [routerLink]="'usuarioConsulta'" > Usuarios</a>
+      <button ngbDropdownItem [routerLink]="'usuarioConsulta'">Usuarios</button>
+      <button ngbDropdownItem>Action</button>
+      <button ngbDropdownItem>Another action</button>
+      <button ngbDropdownItem>Something else here</button>
+      <div class="dropdown-divider"></div>
+      <button ngbDropdownItem>Separated link</button>
+    </div>
+  </li>
+  <li ngbNavItem [disabled]="true" class="ml-auto">
+    <a ngbNavLink>Disabled</a>
+    <ng-template ngbNavContent>
+      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi.
+        Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio.
+        Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna,
+        egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec
+        tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et
+        magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget
+        neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+    </ng-template>
+  </li>
+</ul>
+
+<div [ngbNavOutlet]="nav" class="mt-2"></div> -->
+
+
+
+
+
+
+
+<!-- <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
   <a class="navbar-brand" [routerLink]="['/login']">Paletas la Bendicion</a>
 
 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +192,7 @@
       
       
     </div>
-  </li>
+  </li> -->
     <!-- <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Clientes
@@ -43,16 +212,16 @@
           
         </div>
      </li> -->
-  </ul>
+  <!-- </ul>
 </div>
-</nav>
+</nav> -->
 
 
 
 
 
 
-  <nav
+  <!-- <nav
   
   class="navbar  navbar-light bg-light navbar-expand-sm  navbar-toggleable-sm  border-bottom box-shadow mb-3" 
   >
@@ -134,7 +303,9 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
+
+
 
 <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
