--- a/Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/Web/ClientApp/src/app/usuario/login/login.component.html
@@ -9,12 +9,12 @@
                         
 
                         <div class="form-label-group">
-                            <input type="text" id="nombreUsuario" name="idCliente" [(ngModel)]="usuario.nombreUsuario" class="form-control" placeholder="Usuario" required>
-                            <label for="nombreUsuario">Usuario</label>
+                            <input type="text" id="usuario" name="usuario" [(ngModel)]="login.usuario" class="form-control" placeholder="Usuario" required>
+                            <label for="usuario">Usuario</label>
                         </div>
 
                         <div class="form-label-group">
-                            <input type="password" id="password" name="password" [(ngModel)]="usuario.password" class="form-control" placeholder="Contraseña" required>
+                            <input type="password" id="password" name="password" [(ngModel)]="login.password" class="form-control" placeholder="Contraseña" required>
                             <label for="password">Contraseña</label>
                         </div>
             
