--- a/Web/ClientApp/src/app/usuario/usuario-registro/usuario-registro.component.html
+++ b/Web/ClientApp/src/app/usuario/usuario-registro/usuario-registro.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
           <div class="card-body">
-            <h5 class="card-title text-center">Registo de Usuario</h5><br>
+            <h5 class="card-title text-center">Registro de Usuario</h5><br>
             <form class="form-signin">
      <!-- <form class="box" > -->
                 <!-- <h5 >Registo de Usuarios</h5><br> -->
