--- a/Web/ClientApp/src/app/usuario/usuario-registro/usuario-registro.component.html
+++ b/Web/ClientApp/src/app/usuario/usuario-registro/usuario-registro.component.html
@@ -4,30 +4,81 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
           <div class="card-body">
-            <h5 class="card-title text-center">Registro de Usuario</h5><br>
-            <form class="form-signin">
-     <!-- <form class="box" > -->
-                <!-- <h5 >Registo de Usuarios</h5><br> -->
-                <div class="form-label-group">
-                  <input type="text" id="cedula" name="cedula" [(ngModel)]="usuario.cedula" class="form-control" placeholder="Cedula" required>
-                  <label for="cedula">Cedula</label>
-                </div>
+            <h5 class="card-title text-center">Registro de Usuarios</h5>
+            <form class="form-signin" [formGroup]="formGroup">
+              
+              <div class="form-label-group">
+                <input type="text" id="usuario" name="usuario" formControlName="usuario" class="form-control" placeholder="Username" required 
+                [ngClass]="{ 'is-invalid':  control.usuario.errors }"
+                />
+                <div *ngIf="control.usuario.errors " class="invalid-feedback">           
+                  <div *ngIf="control.usuario.errors.required">Se require la usuario</div>
+                  <!-- <div *ngIf="control.clienteId.errors.validaId">Esta id ya esta registrada</div> -->
+                </div>                  
+                <label for="usuario">Usuario</label>
+              </div><br>
 
-                <div class="form-label-group">
-                  <input type="text" id="nombre" name="nombre" [(ngModel)]="usuario.nombre" class="form-control" placeholder="Nombre" required>
+              <div class="form-label-group">
+                <input  type="password" id="password" name="password" formControlName="password" class="form-control" placeholder="Password" required [ngClass]="{ 'is-invalid':  control.password.errors}">
+                <div *ngIf="control.password.errors" class="invalid-feedback">
+                  <div *ngIf="control.password.errors.required">Se require el password</div>
+                </div>
+                <label for="password">Password</label>
+            </div><br>
+
+            <div class="form-label-group">
+              <input  type="" id="estado" name="estado" formControlName="estado" class="form-control" placeholder="Estado" required [ngClass]="{ 'is-invalid':  control.estado.errors}">
+              <div *ngIf="control.estado.errors" class="invalid-feedback">
+                <div *ngIf="control.estado.errors.required">Se require el estado</div>
+              </div>
+              <label for="estado">Estado</label>
+          </div><br>
+
+              <div class="form-label-group">
+                  <input  type="text" id="nombre" name="nombre" formControlName="nombre" class="form-control" placeholder="Nombre" required [ngClass]="{ 'is-invalid':  control.nombre.errors}">
+                  <div *ngIf="control.nombre.errors" class="invalid-feedback">
+                    <div *ngIf="control.nombre.errors.required">Se require el nombre</div>
+                  </div>
                   <label for="nombre">Nombre</label>
-                </div>
+              </div><br>
 
-                <div class="form-label-group">
-                    <input type="password" id="password" name="password" [(ngModel)]="usuario.password" class="form-control" placeholder="Contraseña" required>
-                    <label for="password">Contraseña</label>
+              <div class="form-label-group">
+                <input type="text" id="apellido" name="apellido" formControlName="apellido" class="form-control" placeholder="Apellido" required [ngClass]="{ 'is-invalid':  control.apellido.errors}">
+                <div *ngIf="control.apellido.errors" class="invalid-feedback">
+                  <div *ngIf="control.apellido.errors.required">Se require el apellido</div>                  
                 </div>
-  
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" (click)="add()">Registrar</button>
-                <button class="btn btn-lg btn-secondary btn-block text-uppercase" type="reset">Cancelar</button>
-                
+                <label for="apellido">Apellido</label>
+            </div><br>
+
+            <div>
+              <label for="role">Rol</label>
+              <select id="role" name="role" formControlName="role" class="form-control" required [ngClass]="{ 'is-invalid':  control.role.errors}">
+                <option value="Administrador">Administrador</option>
+                <option value="Vendedor">Vendedor</option>
+             </select>
+             <div *ngIf="control.role.errors" class="invalid-feedback">
+              <div *ngIf="control.role.errors.required">Se require el rol</div>                  
+            </div>
+              <!-- <input type="" id="role" name="role" formControlName="role" class="form-control" placeholder="Role" required [ngClass]="{ 'is-invalid':  control.role.errors}">
+              <div *ngIf="control.role.errors" class="invalid-feedback">
+                <div *ngIf="control.role.errors.required">Se require el rol</div>                  
+              </div> -->
+              
+          </div><br>
+
+              <div class="form-label-group">
+                  <input type="text" id="telefono" name="telefono" formControlName="telefono" class="form-control" placeholder="Telefono" required [ngClass]="{ 'is-invalid':  control.telefono.errors}">
+                  <div *ngIf="control.telefono.errors" class="invalid-feedback">
+                    <div *ngIf="control.telefono.errors.required">Se require el telefono</div>
+                  </div>
+                  <label for="telefono">Telefono</label>
+              </div><br>
+
+              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" (click)="onSubmit()"  [disabled]="formGroup.invalid">Registrar</button>
+              <button class="btn btn-lg btn-secondary btn-block text-uppercase" type="reset"(click)="onReset()">Cancelar</button>
+            
             </form>
-           </div>
+          </div>
         </div>
       </div>
     </div>
