apAplicaciones en tiempo Real - NetCore SignalR + Angular

--- a/Web/ClientApp/src/app/usuario/usuario-consulta/usuario-consulta.component.html
+++ b/Web/ClientApp/src/app/usuario/usuario-consulta/usuario-consulta.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-6">
         <h1>Usuarios</h1>
-        <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Buscar">
+    <!--     <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Buscar"> -->
     </div>
   </div>
   <hr>
