--- a/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.html
+++ b/Web/ClientApp/src/app/cliente/cliente-consulta/cliente-consulta.component.html
@@ -3,7 +3,7 @@
   <div class="row">
         <div class="col-6">
         <h1>Clientes</h1>
-          <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Buscar">
+    <!--       <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Buscar">|filtroCliente:searchText -->
         </div>
       </div>
       <hr>
@@ -77,7 +77,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let cliente of clientes|filtroCliente:searchText; index as i">
+      <tr *ngFor="let cliente of clientes; index as i">
         <td data-label="Nº" scope="row">{{ i + 1 }}</td>
         <td data-label="Cedula"class="text-right">{{ cliente.clienteId | number }}</td>
         <td data-label="Nombre"class="text-left text-capitalize">{{ cliente.nombre }}</td>
